# hunter-api-client

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/hunter_client/: __init__.py  _version.py  client.py  config.py  dependencies.py  endpoints.py  http_client.py  main.py  models.py  response_handler.py  services.py
src/hunter_client/models/: __init__.py  account.py  common.py  domain.py  email_finder.py  verifier.py
tests/: __init__.py  test_client.py
