[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hunter-client"
version = "0.1.0"
description = "Hunter.io API client with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic[email]",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "wemake-python-styleguide",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "respx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/hunter_client"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120